Fixed things according to some of the feedback